samples/_failures_safe/1761692078_84be4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c501a56c.c: In function ‘show_statistics’:
./samples/SAFE/__tmp_c501a56c.c:147:12: error: missing terminating " character
  147 |     printf("Compression Statistics:\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c501a56c.c:147:5: error: expected expression at end of input
  147 |     printf("Compression Statistics:\n
      |     ^~~~~~
./samples/SAFE/__tmp_c501a56c.c:147:5: error: expected declaration or statement at end of input
